test/negative/219_continue_in_arm_outside_loop.err
219_continue_in_arm_outside_loop.fx:3:39: error: cannot use 'continue' outside of loop
 3 | fun f(x: int): int = match x { | 0 => continue | v => v }
   |                                       ^~~~~~~~

1 errors occured during type checking.
